[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "printers"
dynamic = ["version"]
description = "Cross-vendor dashboard of networked 3D printers with live status, controls, multi-send and an OrcaSlicer output history."
requires-python = ">=3.12"
authors = [{ name = "FilamentHub" }]

[tool.setuptools]
py-modules = ["printers_plugin"]

# Single source of truth: the PLUGIN_VERSION constant in the module. The wheel
# derives from it (no hand-copied number); build_package.py validates that the
# PEP 723 `# version` comment matches.
[tool.setuptools.dynamic]
version = { attr = "printers_plugin.PLUGIN_VERSION" }
